--- a/static/css/home.css
+++ b/static/css/home.css
@@ -298,6 +298,14 @@
     margin-top: 55px;
 }
 
+.no-list {
+    text-align: center;
+    color: #648efc;
+    font-weight: 600;
+    font-size: 14px;
+    margin-top: 100px;
+}
+
 .list-card {
     float: left;
     width: 23%;
