when move to category by banner, tag and category hover fix (#issue 190)

--- a/templates/category.html
+++ b/templates/category.html
@@ -53,11 +53,17 @@
                 }
             });
 
+
+            // selected category color
             $('.header_navigation li a').each(function(){
-                if($(this).text().trim()=='{{ category }}'){
+                if($(this).text().trim()=='{{ category_name }}'){
                     $(this).parent().addClass('active');
                 }
             });
+
+            // selected tag color
+            ($('.tags_wrapper').find("input[value={{ tag_name.0 }}]")).attr('checked',true);
+            check_tags_for_hover();
 
             $('#tag_navigation').on('change', function () {
                 var checked_tags = [];
@@ -188,7 +194,13 @@
         <div class="special-service">
             <div class="special-info">
                 <div class="special-title">
-                    인기 {{ category }} 포스팅
+                    인기
+                    {% if tag_name.1 %}
+                        {{ tag_name.1 }}
+                    {% else %}
+                        {{ category_name }}
+                    {% endif %}
+                    포스팅
                     <div class="special-subtitle">
                         * 소셜업 게이지란? 소셜업만의 알고리즘을 통해 SNS의 다양한 요소를 분석해 수치화 시킨 광고비 대비 효과 지수입니다.
                     </div>
