enable popup for purchase_decide, cancel in purchase_list (issue #193)

--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -317,11 +317,11 @@
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" >
-                                        <form method="POST" action="{% url 'purchase_list' %}">{% csrf_token %}
+                                        <form method="POST" action="{% url 'purchase_list' %}" class="order-item-decide-from">{% csrf_token %}
                                             <input type="hidden" name="is_status_change" value="true"/>
                                             <input type="hidden" name="new_status" value="finished"/>
                                             <input type="hidden" name="order_item" value="{{ order_item }}"/>
-                                            <input type="submit" value="구매확정"/>
+                                            <input type="button" class="detail_bottom_btn decide" value="구매확정"/>
                                         </form>
                                     </div>
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
@@ -506,11 +506,11 @@
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" >
-                                        <form method="POST" action="{% url 'purchase_list' %}">{% csrf_token %}
+                                        <form method="POST" action="{% url 'purchase_list' %}" class="order-item-decide-from">{% csrf_token %}
                                             <input type="hidden" name="is_status_change" value="true"/>
                                             <input type="hidden" name="new_status" value="finished"/>
                                             <input type="hidden" name="order_item" value="{{ order_item }}"/>
-                                            <input type="submit" value="구매확정"/>
+                                            <input type="button" class="detail_bottom_btn decide" value="구매확정"/>
                                         </form>
                                     </div>
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
@@ -673,11 +673,11 @@
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" style="width:75px; font-size:11px; margin-right:3px;">
-                                        <form method="POST" action="{% url 'purchase_list' %}">{% csrf_token %}
+                                        <form method="POST" action="{% url 'purchase_list' %}" class="order-item-decide-from">{% csrf_token %}
                                             <input type="hidden" name="is_status_change" value="true"/>
                                             <input type="hidden" name="new_status" value="finished"/>
                                             <input type="hidden" name="order_item" value="{{ order_item }}"/>
-                                            <input type="submit" value="구매확정"/>
+                                            <input type="button" class="detail_bottom_btn decide" value="구매확정"/>
                                         </form>
                                     </div>
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
