--- a/static/css/dashboard_sidebar.css
+++ b/static/css/dashboard_sidebar.css
@@ -74,11 +74,8 @@
 }
 
 .dashboard-side .user-money {
-    height: 170px;
     background: #648efc;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
     color: white;
     text-align: center;
 }
