--- a/templates/category.html
+++ b/templates/category.html
@@ -62,9 +62,10 @@
             });
 
             // selected tag color
-            ($('.tags_wrapper').find("input[value={{ tag_name.0 }}]")).attr('checked',true);
-            check_tags_for_hover();
-
+            if('{{ tag_name.0 }}'){
+                ($('.tags_wrapper').find("input[value={{ tag_name.0 }}]")).attr('checked',true);
+                check_tags_for_hover();
+            }
             $('#tag_navigation').on('change', function () {
                 var checked_tags = [];
                 var checked_clicked = $('input[name=tag]:checked').next().find('.tag_image_clicked').get();
@@ -229,7 +230,6 @@
                 {% else %}
                     <div class="product-rating" style="display:block;">
                         {% for product in products_rating %}
-                            {% cycle '<div class="row">' '' '' '' %}
                             <a href="{{ product.get_absolute_url }}"
                                class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}" data-id="{{ product.id }}">
                                 <div class="card-main-info" data-type="{{ product.sns_type }}" data-color="{{ product.sns_type_color }}">
@@ -332,15 +332,12 @@
 
                             {% if products|length == forloop.counter %}
                                 </div>
-                            {% else %}
-                                {% cycle '' '' '' '</div>' %}
                             {% endif %}
                         {% endfor %}
                     </div>
                     </div>
                     <div class="product-created" style="display:none;">
                         {% for product in products_created %}
-                            {% cycle '<div class="row">' '' '' '' %}
                             <a href="{{ product.get_absolute_url }}"
                                class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}" data-id="{{ product.id }}">
                                 <div class="card-main-info" data-type="{{ product.sns_type }}" data-color="{{ product.sns_type_color }}">
@@ -441,15 +438,12 @@
 
                             {% if products|length == forloop.counter %}
                                 </div>
-                            {% else %}
-                                {% cycle '' '' '' '</div>' %}
                             {% endif %}
                         {% endfor %}
                     </div>
                     </div>
                     <div class="product-price" style="display:none;">
                         {% for product in products_price %}
-                            {% cycle '<div class="row">' '' '' '' %}
                             <a href="{{ product.get_absolute_url }}"
                                class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}" data-id="{{ product.id }}">
                                 <div class="card-main-info" data-type="{{ product.sns_type }}" data-color="{{ product.sns_type_color }}">
@@ -552,8 +546,6 @@
 
                             {% if products|length == forloop.counter %}
                                 </div>
-                            {% else %}
-                                {% cycle '' '' '' '</div>' %}
                             {% endif %}
                         {% endfor %}
                     </div>
